--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@neverdull-agency/expo-unlimited-secure-store": "^1.0.10",
     "@nozbe/watermelondb": "^0.27.1",
     "@nozbe/with-observables": "^1.6.0",
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/netinfo": "11.1.0",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-firebase/analytics": "^20.4.0",
     "@react-native-firebase/app": "^20.4.0",
@@ -45,7 +45,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reown/walletkit": "^1.1.1",
-    "@sentry/react-native": "^6.10.0",
+    "@sentry/react-native": "~5.20.0",
     "@shopify/flash-list": "1.6.3",
     "@shopify/react-native-skia": "0.1.221",
     "@solana/web3.js": "^1.78.2",
@@ -82,27 +82,27 @@
     "ethjs-provider-http": "^0.1.6",
     "ethjs-query": "^0.3.8",
     "events": "^3.3.0",
-    "expo": "~50.0.14",
+    "expo": "~50.0.20",
     "expo-barcode-scanner": "~12.9.3",
     "expo-build-properties": "~0.11.1",
-    "expo-camera": "~14.1.1",
+    "expo-camera": "~14.1.3",
     "expo-clipboard": "~5.0.1",
     "expo-crypto": "~12.8.1",
-    "expo-dev-client": "~3.3.11",
-    "expo-device": "~5.9.3",
-    "expo-file-system": "~16.0.8",
+    "expo-dev-client": "~3.3.12",
+    "expo-device": "~5.9.4",
+    "expo-file-system": "~16.0.9",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-local-authentication": "~13.8.0",
-    "expo-notifications": "~0.27.6",
+    "expo-notifications": "~0.27.8",
     "expo-secure-store": "~12.8.1",
     "expo-sharing": "~11.10.0",
-    "expo-splash-screen": "~0.26.4",
+    "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "expo-store-review": "~6.8.3",
-    "expo-system-ui": "~2.9.3",
-    "expo-updates": "~0.24.12",
+    "expo-system-ui": "~2.9.4",
+    "expo-updates": "~0.24.13",
     "fast-text-encoding": "^1.0.6",
     "graphql": "^16.9.0",
     "https-browserify": "^0.0.1",
@@ -126,7 +126,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-get-random-values": "^1.11.0",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-graph": "^1.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mmkv": "2.12.2",
