--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@neverdull-agency/expo-unlimited-secure-store": "^1.0.10",
     "@nozbe/watermelondb": "^0.27.1",
     "@nozbe/with-observables": "^1.6.0",
-    "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-firebase/analytics": "^20.4.0",
     "@react-native-firebase/app": "^20.4.0",
@@ -45,9 +45,9 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reown/walletkit": "^1.1.1",
-    "@sentry/react-native": "^6.10.0",
-    "@shopify/flash-list": "1.6.3",
-    "@shopify/react-native-skia": "0.1.221",
+    "@sentry/react-native": "~6.10.0",
+    "@shopify/flash-list": "1.7.3",
+    "@shopify/react-native-skia": "1.5.0",
     "@solana/web3.js": "^1.78.2",
     "@tanstack/react-query": "^4.28.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -82,69 +82,69 @@
     "ethjs-provider-http": "^0.1.6",
     "ethjs-query": "^0.3.8",
     "events": "^3.3.0",
-    "expo": "~50.0.14",
+    "expo": "^52.0.0",
     "expo-barcode-scanner": "~12.9.3",
-    "expo-build-properties": "~0.11.1",
-    "expo-camera": "~14.1.1",
-    "expo-clipboard": "~5.0.1",
-    "expo-crypto": "~12.8.1",
-    "expo-dev-client": "~3.3.11",
-    "expo-device": "~5.9.3",
-    "expo-file-system": "~16.0.8",
-    "expo-font": "~11.10.3",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "~6.2.2",
-    "expo-local-authentication": "~13.8.0",
-    "expo-notifications": "~0.27.6",
-    "expo-secure-store": "~12.8.1",
-    "expo-sharing": "~11.10.0",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-store-review": "~6.8.3",
-    "expo-system-ui": "~2.9.3",
-    "expo-updates": "~0.24.12",
+    "expo-build-properties": "~0.13.3",
+    "expo-camera": "~16.0.18",
+    "expo-clipboard": "~7.0.1",
+    "expo-crypto": "~14.0.2",
+    "expo-dev-client": "~5.0.20",
+    "expo-device": "~7.0.3",
+    "expo-file-system": "~18.0.12",
+    "expo-font": "~13.0.4",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-local-authentication": "~15.0.2",
+    "expo-notifications": "~0.29.14",
+    "expo-secure-store": "~14.0.1",
+    "expo-sharing": "~13.0.1",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
+    "expo-store-review": "~8.0.1",
+    "expo-system-ui": "~4.0.9",
+    "expo-updates": "~0.27.4",
     "fast-text-encoding": "^1.0.6",
     "graphql": "^16.9.0",
     "https-browserify": "^0.0.1",
     "i18n-js": "^4.3.0",
     "i18next": "^23.5.1",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.4",
+    "jest-expo": "~52.0.6",
     "lodash": "^4.17.21",
-    "lottie-react-native": "6.5.1",
+    "lottie-react-native": "7.1.0",
     "moment": "^2.29.4",
     "patch-package": "^7.0.0",
     "postinstall-postinstall": "^2.1.0",
     "process": "^0.11.10",
     "protocol-buffers-encodings": "^1.2.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-i18next": "^13.1.0",
-    "react-native": "0.73.6",
+    "react-native": "0.76.9",
     "react-native-calendar-picker": "^7.1.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-device-info": "^11.1.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-get-random-values": "^1.11.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-graph": "^1.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-mmkv": "2.12.2",
     "react-native-modal": "^13.0.1",
     "react-native-mymonero-core": "^0.3.1",
     "react-native-os": "^1.2.6",
-    "react-native-pager-view": "6.2.3",
+    "react-native-pager-view": "6.5.1",
     "react-native-popover-view": "^5.1.7",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-quick-base64": "^2.0.8",
     "react-native-quick-crypto": "^0.6.1",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-share": "^8.2.2",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.1",
-    "react-native-view-shot": "3.8.0",
+    "react-native-view-shot": "~4.0.3",
     "react-native-walkthrough-tooltip": "^1.5.0",
     "ripple-lib": "^1.10.1",
     "stellar-sdk": "^10.4.1",
@@ -162,11 +162,12 @@
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-decorators": "^7.22.3",
     "@babel/preset-typescript": "^7.21.5",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native-calendar-picker": "^7.0.3",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "@walletconnect/jsonrpc-types": "^1.0.4",
-    "babel-preset-expo": "^10.0.0",
+    "babel-preset-expo": "~12.0.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
