--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@airdao/airdao-bond": "npm:@airdao/airdao-bond@12.1.13-upg",
     "@apollo/client": "^3.11.10",
+    "@babel/plugin-transform-class-properties": "^7.27.1",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
     "@babel/preset-env": "^7.21.5",
     "@craftzdog/react-native-buffer": "^6.0.5",
     "@ethersproject/shims": "^5.7.0",
@@ -34,7 +36,7 @@
     "@neverdull-agency/expo-unlimited-secure-store": "^1.0.10",
     "@nozbe/watermelondb": "^0.27.1",
     "@nozbe/with-observables": "^1.6.0",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-firebase/analytics": "^20.4.0",
@@ -45,9 +47,9 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reown/walletkit": "^1.1.1",
-    "@sentry/react-native": "^6.10.0",
-    "@shopify/flash-list": "1.6.3",
-    "@shopify/react-native-skia": "0.1.221",
+    "@sentry/react-native": "~6.14.0",
+    "@shopify/flash-list": "1.7.6",
+    "@shopify/react-native-skia": "2.0.0-next.4",
     "@solana/web3.js": "^1.78.2",
     "@tanstack/react-query": "^4.28.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -82,50 +84,50 @@
     "ethjs-provider-http": "^0.1.6",
     "ethjs-query": "^0.3.8",
     "events": "^3.3.0",
-    "expo": "~50.0.14",
+    "expo": "^53.0.19",
     "expo-barcode-scanner": "~12.9.3",
-    "expo-build-properties": "~0.11.1",
-    "expo-camera": "~14.1.1",
-    "expo-clipboard": "~5.0.1",
-    "expo-crypto": "~12.8.1",
-    "expo-dev-client": "~3.3.11",
-    "expo-device": "~5.9.3",
-    "expo-file-system": "~16.0.8",
-    "expo-font": "~11.10.3",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "~6.2.2",
-    "expo-local-authentication": "~13.8.0",
-    "expo-notifications": "~0.27.6",
-    "expo-secure-store": "~12.8.1",
-    "expo-sharing": "~11.10.0",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-store-review": "~6.8.3",
-    "expo-system-ui": "~2.9.3",
-    "expo-updates": "~0.24.12",
+    "expo-build-properties": "~0.14.8",
+    "expo-camera": "~16.1.10",
+    "expo-clipboard": "~7.1.5",
+    "expo-crypto": "~14.1.5",
+    "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
+    "expo-file-system": "~18.1.11",
+    "expo-font": "~13.3.2",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.7",
+    "expo-local-authentication": "~16.0.5",
+    "expo-notifications": "~0.31.4",
+    "expo-secure-store": "~14.2.3",
+    "expo-sharing": "~13.1.5",
+    "expo-splash-screen": "~0.30.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-store-review": "~8.1.5",
+    "expo-system-ui": "~5.0.10",
+    "expo-updates": "~0.28.17",
     "fast-text-encoding": "^1.0.6",
     "graphql": "^16.9.0",
     "https-browserify": "^0.0.1",
     "i18n-js": "^4.3.0",
     "i18next": "^23.5.1",
-    "jest": "^29.2.1",
-    "jest-expo": "~50.0.4",
+    "jest": "~29.7.0",
+    "jest-expo": "~53.0.9",
     "lodash": "^4.17.21",
-    "lottie-react-native": "6.5.1",
+    "lottie-react-native": "7.2.2",
     "moment": "^2.29.4",
     "patch-package": "^7.0.0",
     "postinstall-postinstall": "^2.1.0",
     "process": "^0.11.10",
     "protocol-buffers-encodings": "^1.2.0",
-    "react": "18.2.0",
+    "react": "19.0.0",
     "react-i18next": "^13.1.0",
-    "react-native": "0.73.6",
+    "react-native": "0.79.5",
     "react-native-calendar-picker": "^7.1.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-device-info": "^11.1.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-graph": "^1.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -133,18 +135,18 @@
     "react-native-modal": "^13.0.1",
     "react-native-mymonero-core": "^0.3.1",
     "react-native-os": "^1.2.6",
-    "react-native-pager-view": "6.2.3",
+    "react-native-pager-view": "6.7.1",
     "react-native-popover-view": "^5.1.7",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-quick-base64": "^2.0.8",
     "react-native-quick-crypto": "^0.6.1",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-share": "^8.2.2",
-    "react-native-svg": "14.1.0",
+    "react-native-svg": "15.11.2",
     "react-native-tab-view": "^3.5.1",
-    "react-native-view-shot": "3.8.0",
+    "react-native-view-shot": "4.0.3",
     "react-native-walkthrough-tooltip": "^1.5.0",
     "ripple-lib": "^1.10.1",
     "stellar-sdk": "^10.4.1",
@@ -159,14 +161,13 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/plugin-proposal-decorators": "^7.22.3",
+    "@babel/core": "^7.26.0",
     "@babel/preset-typescript": "^7.21.5",
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.0.10",
     "@types/react-native-calendar-picker": "^7.0.3",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@walletconnect/jsonrpc-types": "^1.0.4",
-    "babel-preset-expo": "^10.0.0",
+    "babel-preset-expo": "~13.0.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -182,7 +183,7 @@
     "prettier": "2.8.7",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^5.3.0"
+    "typescript": "~5.8.3"
   },
   "react-native": {
     "crypto": "react-native-quick-crypto",
