refactor(metro): clean up Metro configuration by removing deprecated settings
- Removed support for database files and additional source extensions.
- Eliminated transformer options and resolver aliases for a more streamlined configuration.
- Adjusted Metro's memory limit and node_modules handling for better performance.
- Updated package.json to include 'react-dom' version 19.1.0 and its dependencies in yarn.lock.

--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "process": "^0.11.10",
     "protocol-buffers-encodings": "^1.2.0",
     "react": "19.0.0",
+    "react-dom": "^19.1.0",
     "react-i18next": "^13.1.0",
     "react-native": "0.79.5",
     "react-native-calendar-picker": "^7.1.4",
